[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Assets_0001s_0002_Play-Again!.png" type="Texture" id=1]
[ext_resource path="res://Scripts/EndCard.gd" type="Script" id=2]
[ext_resource path="res://Assets/Assets_0000_Roof.png" type="Texture" id=3]
[ext_resource path="res://Assets/Assets_0001s_0000_So-many-Patrons-Weâ€™re-Booked-Out!.png" type="Texture" id=4]
[ext_resource path="res://Assets/Assets_0001s_0001_Completed-With--Remaining.png" type="Texture" id=5]
[ext_resource path="res://Assets/Assets_0001s_0000_Too-Easy!.png" type="Texture" id=6]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = -384.0
margin_top = 96.0
margin_right = -128.0
margin_bottom = 158.0
rect_scale = Vector2( 3, 3 )
texture_normal = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="TextureButton"]
position = Vector2( 128, 32 )
texture = ExtResource( 1 )

[node name="Remaining" type="Sprite" parent="."]
position = Vector2( 0, -264 )
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )

[node name="RemainingTime" type="Label" parent="Remaining"]
margin_left = -53.3333
margin_top = -18.6667
margin_right = -13.3333
margin_bottom = 12.3333
rect_scale = Vector2( 3, 3 )
text = "60.00"

[node name="FlavorText" type="Sprite" parent="."]
position = Vector2( 672, -232 )
rotation = 0.328122
texture = ExtResource( 4 )

[node name="HardMode" type="TextureButton" parent="."]
margin_left = -128.0
margin_top = 360.0
margin_right = 128.0
margin_bottom = 422.0
texture_normal = ExtResource( 3 )

[node name="TooEasy" type="Sprite" parent="HardMode"]
position = Vector2( 136, 32 )
texture = ExtResource( 6 )

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="HardMode" to="." method="_on_HardMode_pressed"]
